# pubtator_benchiling

./: .env.example  .gitignore  .pre-commit-config.yaml  METADATA_COMPARISON.md  README.md  alembic.ini  docker-compose.opensearch.yaml  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  run_gilead_pubtator.sh
Notebooks/: benchling_pipeline_test.ipynb  csv_full_pipeline.ipynb  docx_full_pipeline.ipynb  pdf_full_pipeline.ipynb  pdf_local_ingestor.ipynb  pptx_full_pipeline.ipynb  s3_bucket_explorer.ipynb  s3_explorer_pubtator.ipynb  txt_full_pipeline.ipynb  xlsx_full_pipeline.ipynb
alembic/: env.py
alembic/versions/: 00faa5ab6766_initial_migration.py  19b0eacf387f_creating_chunks_table_in_db.py  32549047c317_add_chunks_with_annotations_table.py  38388f706740_initial_migration.py  4069f15296ff_create_chunks_similarity_table.py  5099050ce941_create_all_tables.py  88288c5e04ba_initial_migration.py  b1f7d15818c7_initial_migration.py  b3b9ab9ae808_rename_chunk_number_to_chunk_sequence.py
configs/: aws.yaml  curated_dataset.yaml  paths.yaml  vector_db.yaml  vectordb.yaml
notebooks/: embedding_model_tokens_vizualized.ipynb  embedding_models_bioformer.ipynb  embedding_models_pubmedbert.ipynb  embedding_models_visualised.ipynb  extractive_qna.ipynb  generate_docs_embeddings.ipynb  reranking_logic.ipynb  similarity_across_articles - Biobert.ipynb  similarity_across_articles - MedEmbed.ipynb  similarity_across_articles - Pubmedbert.ipynb  test.ipynb
src/Prompts/: PromptBuilder.py  guardrails.py  guidelines.py  instructions.py  output_format.py  persona.py  summarise.py
src/alembic_models/: chunks.py  simillarity.py
src/data_enrichment/: post_processor.py
src/data_ingestion/: articles_ingestor.py  articles_summarizer.py  extractor.py  fetch_metadata.py  ingest_pubmed_articles.py  ingestor.py  orchestrator.py  (+6 more)
(+208 files in other folders)
